--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ future: true
 
 # SNS settings
 RSS: false
-#weibo_username:     huxpro
+weibo_username:      Andrie_Yean
 zhihu_username:      阿鲁威扬
 github_username:     AndrieYean
 #twitter_username:   huxpro
@@ -60,7 +60,7 @@ kramdown:
 
 # Disqus settings
 duoshuo_share: false
-# disqus_username: FitzBC
+# disqus_username: AndrieYean
 
 # Netease settings
 netease_comment: false
