--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ netease_comment: false
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-# sidebar-about-description: "For the next quantum leap<br>离开世界之前，一切都是过程"
+sidebar-about-description: "m LaiChick"
 sidebar-avatar: /img/Yean-protrait.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
@@ -102,10 +102,10 @@ page-mathjax: false
 
 
 # Friends
-friends: [
-    {
-        title: "FitzBC",
-        href: "FitzBC.github.io"
+# friends: [
+#     {
+#         title: "FitzBC",
+#         href: "FitzBC.github.io"
     # },{
     }
 ]
