--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Yean's Dancing Hall
-SEOTitle: Andrie Yean Blog
+SEOTitle: Yean's Dancing Hall
 header-img: img/home-bg.jpg
 email: andrieyean576@gmail.com
 description: "人理之光"
