--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ RSS: false
 weibo_username:      Andrie_Yean
 zhihu_username:      阿鲁威扬
 github_username:     AndrieYean
-#twitter_username:   huxpro
+twitter_username:    Andrie_Yean
 #facebook_username:  huxpro
 #linkedin_username:  firstname-lastname-idxxxx
 
