--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Yean's Dancing Hall
+title: Yean Blog
 SEOTitle: Yean's Dancing Hall
 header-img: img/home-bg.jpg
 email: andrieyean576@gmail.com
