--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: Yean Blog
-SEOTitle: Yean's Dancing Hall
+title: Yean's Dancing Hall
+SEOTitle: Andrie Yean Blog
 header-img: img/home-bg.jpg
 email: andrieyean576@gmail.com
 description: "人理之光"
@@ -79,7 +79,7 @@ netease_comment: false
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "m LaiChick"
+# sidebar-about-description: "For the next quantum leap<br>离开世界之前，一切都是过程"
 sidebar-avatar: /img/Yean-protrait.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
@@ -102,10 +102,10 @@ page-mathjax: false
 
 
 # Friends
-# friends: [
-#     {
-#         title: "FitzBC",
-#         href: "FitzBC.github.io"
+friends: [
+    {
+        title: "FitzBC",
+        href: "FitzBC.github.io"
     # },{
     }
 ]
