--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ future: true
 # SNS settings
 RSS: false
 weibo_username:      Andrie_Yean
-zhihu_username:      阿鲁威扬
+zhihu_username:      yang-yi-chen-3-53
 github_username:     AndrieYean
 twitter_username:    Andrie_Yean
 #facebook_username:  huxpro
